--- a/package.json
+++ b/package.json
@@ -61,10 +61,8 @@
     "css-loader": "0.24.0",
     "enzyme": "^2.8.2",
     "eslint": "3.4.0",
-    "eslint-plugin-flowtype": "2.11.4",
     "eslint-plugin-react": "6.2.0",
     "extract-text-webpack-plugin": "2.0.0-beta.3",
-    "flow-bin": "0.31.1",
     "jquery": "^3.2.1",
     "jsdom": "9.4.5",
     "mocha": "3.0.2",
@@ -80,7 +78,8 @@
     "redbox-react": "^1.3.6",
     "rimraf": "2.5.4",
     "sinon": "^2.1.0",
-    "webpack": "^yarn2.5.1",
+    "style-loader": "^0.18.2",
+    "webpack": "^2.5.1",
     "webpack-dashboard": "0.1.8",
     "webpack-dev-server": "^2.4.4",
     "webpack-hot-middleware": "2.12.2",
